schema/testdata/validation_arbitrary_function_action_types/schema.keel
message Foo {
  bar Text
}

model Person {
  functions {
    get getPerson() returns (Foo)
  }
}
